@@ -114,6 +114,22 @@ name|org
 operator|.
 name|apache
 operator|.
+name|commons
+operator|.
+name|lang
+operator|.
+name|exception
+operator|.
+name|ExceptionUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|hadoop
 operator|.
 name|conf
@@ -289,6 +305,16 @@ operator|.
 name|util
 operator|.
 name|DataChecksum
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
 import|;
 end_import
 
@@ -2230,6 +2256,236 @@ expr_stmt|;
 return|return
 name|fsdataset
 return|;
+block|}
+annotation|@
+name|Test
+DECL|method|testConcurrentAddBlockPool ()
+specifier|public
+name|void
+name|testConcurrentAddBlockPool
+parameter_list|()
+throws|throws
+name|InterruptedException
+throws|,
+name|IOException
+block|{
+specifier|final
+name|String
+index|[]
+name|bpids
+init|=
+block|{
+literal|"BP-TEST1-"
+block|,
+literal|"BP-TEST2-"
+block|}
+decl_stmt|;
+specifier|final
+name|SimulatedFSDataset
+name|fsdataset
+init|=
+operator|new
+name|SimulatedFSDataset
+argument_list|(
+literal|null
+argument_list|,
+name|conf
+argument_list|)
+decl_stmt|;
+class|class
+name|AddBlockPoolThread
+extends|extends
+name|Thread
+block|{
+specifier|private
+name|int
+name|id
+decl_stmt|;
+specifier|private
+name|IOException
+name|ioe
+decl_stmt|;
+specifier|public
+name|AddBlockPoolThread
+parameter_list|(
+name|int
+name|id
+parameter_list|)
+block|{
+name|super
+argument_list|()
+expr_stmt|;
+name|this
+operator|.
+name|id
+operator|=
+name|id
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|test
+parameter_list|()
+throws|throws
+name|InterruptedException
+throws|,
+name|IOException
+block|{
+name|this
+operator|.
+name|join
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+name|ioe
+operator|!=
+literal|null
+condition|)
+block|{
+throw|throw
+name|ioe
+throw|;
+block|}
+block|}
+specifier|public
+name|void
+name|run
+parameter_list|()
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|10000
+condition|;
+name|i
+operator|++
+control|)
+block|{
+comment|// add different block pools concurrently
+name|String
+name|newbpid
+init|=
+name|bpids
+index|[
+name|id
+index|]
+operator|+
+name|i
+decl_stmt|;
+name|fsdataset
+operator|.
+name|addBlockPool
+argument_list|(
+name|newbpid
+argument_list|,
+name|conf
+argument_list|)
+expr_stmt|;
+comment|// and then add a block into the pool
+name|ExtendedBlock
+name|block
+init|=
+operator|new
+name|ExtendedBlock
+argument_list|(
+name|newbpid
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+comment|// it will throw an exception if the block pool is not found
+name|fsdataset
+operator|.
+name|createTemporary
+argument_list|(
+name|StorageType
+operator|.
+name|DEFAULT
+argument_list|,
+name|block
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|ioe
+parameter_list|)
+block|{
+comment|// JUnit does not capture exception in non-main thread,
+comment|// so cache it and then let main thread throw later.
+name|this
+operator|.
+name|ioe
+operator|=
+name|ioe
+expr_stmt|;
+block|}
+assert|assert
+operator|(
+name|fsdataset
+operator|.
+name|getReplicaString
+argument_list|(
+name|newbpid
+argument_list|,
+literal|1
+argument_list|)
+operator|!=
+literal|"null"
+operator|)
+assert|;
+block|}
+block|}
+block|}
+empty_stmt|;
+name|AddBlockPoolThread
+name|t1
+init|=
+operator|new
+name|AddBlockPoolThread
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+name|AddBlockPoolThread
+name|t2
+init|=
+operator|new
+name|AddBlockPoolThread
+argument_list|(
+literal|1
+argument_list|)
+decl_stmt|;
+name|t1
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|t2
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|t1
+operator|.
+name|test
+argument_list|()
+expr_stmt|;
+name|t2
+operator|.
+name|test
+argument_list|()
+expr_stmt|;
 block|}
 block|}
 end_class
